# oramacore_fields

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  STRING.md  STRING_MS.md
.github/workflows/: ci.yml  release.yml
examples/: bool_basic_usage.rs  bool_persistence.rs  geopoint_basic_usage.rs  geopoint_compaction.rs  geopoint_nearby_search.rs  number_basic_usage.rs  number_create_f64_test_index.rs  number_create_test_index.rs  number_multi_bucket.rs  string_filter_basic_usage.rs  string_filter_persistence.rs
oramacore_bool_index/: CLAUDE.md  Cargo.toml  README.md  doc.md
oramacore_bool_index/.github/workflows/: ci.yml
oramacore_bool_index/examples/: bool_basic_usage.rs  bool_persistence.rs
oramacore_bool_index/src/: indexer.rs  io.rs  iterator.rs  lib.rs  storage.rs  version.rs
oramacore_bool_index/tests/: alloc_count.rs  integration_tests.rs
oramacore_fields/: Cargo.toml
oramacore_geopoint_index/: Cargo.toml  INFO.md  doc.md
oramacore_geopoint_index/examples/: geopoint_basic_usage.rs  geopoint_compaction.rs  geopoint_nearby_search.rs
oramacore_geopoint_index/src/: error.rs  indexer.rs  info.rs  io.rs  iterator.rs  live.rs  mmap_vec.rs  platform.rs  point.rs  storage.rs
oramacore_geopoint_index/src/compacted/: build.rs  mod.rs  query.rs
oramacore_geopoint_index/tests/: concurrency_tests.rs  integration_tests.rs
oramacore_number_index/: Cargo.toml  README.md  doc.md
oramacore_number_index/.github/workflows/: ci.yml
oramacore_number_index/examples/: number_basic_usage.rs  number_create_f64_test_index.rs  number_create_test_index.rs  number_multi_bucket.rs
oramacore_number_index/src/: config.rs  indexer.rs  io.rs  iterator.rs  key.rs  lib.rs  live.rs  merge.rs  platform.rs  storage.rs
oramacore_number_index/src/compacted/: mod.rs
oramacore_number_index/tests/: concurrency_tests.rs  integration_tests.rs
oramacore_string_filter_index/: Cargo.toml  doc.md
oramacore_string_filter_index/.github/workflows/: ci.yml
oramacore_string_filter_index/examples/: string_filter_basic_usage.rs  string_filter_persistence.rs
oramacore_string_filter_index/src/: compacted.rs  iterator.rs  lib.rs  live.rs  merge.rs  storage.rs
oramacore_string_filter_index/tests/: concurrency_tests.rs  integration_tests.rs
src/: lib.rs
src/bool/: indexer.rs  info.rs  io.rs  iterator.rs  live.rs  merge.rs  mod.rs  platform.rs  storage.rs  version.rs
src/embedding/: config.rs  distance.rs  error.rs  hnsw.rs  indexer.rs  info.rs  io.rs  live.rs  mod.rs  platform.rs  quantization.rs  search_context.rs  segment.rs  simd.rs  storage.rs
src/geopoint/: config.rs  error.rs  indexer.rs  io.rs  iterator.rs  live.rs  mmap_vec.rs  mod.rs  platform.rs  point.rs  storage.rs
src/geopoint/compacted/: build.rs  mod.rs  query.rs
src/number/: config.rs  error.rs  indexer.rs  info.rs  io.rs  iterator.rs  key.rs  live.rs  merge.rs  mod.rs  platform.rs  storage.rs
src/number/compacted/: mod.rs
src/string/: bm25.rs  compacted.rs  config.rs  indexer.rs  info.rs  io.rs  iterator.rs  live.rs  merge.rs  mod.rs  platform.rs  scorer.rs  scoring.rs  simd.rs  storage.rs
src/string_filter/: compacted.rs  config.rs  error.rs  indexer.rs  info.rs  io.rs  iterator.rs  live.rs  merge.rs  mod.rs  platform.rs  storage.rs
src/vector/: compacted.rs  config.rs  distance.rs  hnsw.rs  indexer.rs  info.rs  io.rs  live.rs  mod.rs  quantization.rs  segment.rs  storage.rs
tests/: bool_alloc_count.rs  bool_integration_tests.rs  embedding_concurrency_tests.rs  embedding_integration_tests.rs  embedding_score_tests.rs  geopoint_alloc_count.rs  geopoint_concurrency_tests.rs  geopoint_integration_tests.rs  number_alloc_count.rs  number_concurrency_tests.rs  number_integration_tests.rs  string_alloc_count.rs  string_concurrency_tests.rs  string_filter_alloc_count.rs  string_filter_concurrency_tests.rs  string_filter_integration_tests.rs  string_integration_tests.rs  string_score_consistency.rs  vector_concurrency_tests.rs  vector_integration_tests.rs
