[package]
name = "oramacore_fields"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "On-disk field indexes (bool, number, string, string_filter, geopoint) for search engines"

[features]
default = ["simd"]
simd = []
serde = ["dep:serde"]
cli = ["clap", "serde"]
alloc-tests = []

[dependencies]
anyhow = "1.0"
arc-swap = "1.8"
fst = { version = "0.4", features = ["levenshtein"] }
xtri = "0.1"
memmap2 = "0.9"
rand = "0.10"
serde_json = "1.0"
smallvec = "1"
tracing = "0.1"
clap = { version = "4", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
rand = "0.10"
assert_approx_eq = "1.1.0"

[[bin]]
name = "oramacore_fields"
path = "src/bin/cli.rs"
required-features = ["cli"]
