[package]
name = "oramacore_string_filter_index"
version.workspace = true
edition = "2021"
description = "On-disk + in-memory string postings index with FST-based compaction"
license = "MIT"

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
fst.workspace = true
memmap2.workspace = true
serde_json.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
rand.workspace = true
